<resources>
  <string name="app_name">AlumniConnector</string>

  <!-- alumni_app_widget.xml -->
  <string name="widget_title">Alumni Connector</string>
  <string name="widget_data" translatable="false">AlumniAppWidget</string>
  <string name="last_seen_time" translatable="false">LastSeenTime</string>

  <!-- activity_chat.xml-->
  <string name="chat_hint">Chat with alumni</string>

  <!-- chat_menu.xml -->
  <string name="sign_out">Sign out</string>

  <!-- activity_selector.xml -->
  <string name="chat">chat</string>
  <string name="map">map</string>

  <!-- activity_profile.xml -->

  <string name="profile">Profile</string>
  <string name="name">Name</string>
  <string name="address_1">Address 1</string>
  <string name="address_2">Address 2</string>
  <string name="address_3">Address 3</string>
  <string name="city">City</string>
  <string name="zip_code">ZIP code</string>

  <string name="error_address">Need an Address</string>

  <string-array name="states_array">
    <item>Alabama</item>
    <item>Alaska</item>
    <item>Arizona</item>
    <item>Arkansas</item>
    <item>California</item>
    <item>Colorado</item>
    <item>Connecticut</item>
    <item>DC</item>
    <item>Delaware</item>
    <item>Florida</item>
    <item>Georgia</item>
    <item>Hawaii</item>
    <item>Idaho</item>
    <item>Illinois</item>
    <item>Indiana</item>
    <item>Iowa</item>
    <item>Kansas</item>
    <item>Kentucky</item>
    <item>Louisiana</item>
    <item>Maine</item>
    <item>Maryland</item>
    <item>Massachusetts</item>
    <item>Michigan</item>
    <item>Minnesota</item>
    <item>Mississippi</item>
    <item>Missouri</item>
    <item>Montana</item>
    <item>Nebraska</item>
    <item>Nevada</item>
    <item>New Hampshire</item>
    <item>New Jersey</item>
    <item>New Mexico</item>
    <item>New York</item>
    <item>North Carolina</item>
    <item>North Dakota</item>
    <item>Ohio</item>
    <item>Oklahoma</item>
    <item>Oregon</item>
    <item>Pennsylvania</item>
    <item>Rhode Island</item>
    <item>South Carolina</item>
    <item>South Dakota</item>
    <item>Tennessee</item>
    <item>Texas</item>
    <item>Utah</item>
    <item>Vermont</item>
    <item>Virginia</item>
    <item>Washington</item>
    <item>West Virginia</item>
    <item>Wisconsin</item>
    <item>Wyoming</item>
  </string-array>

  <string-array name="class_array">
    <item>1990</item>
    <item>1991</item>
    <item>1992</item>
    <item>1993</item>
    <item>1994</item>
    <item>1995</item>
    <item>1996</item>
    <item>1997</item>
    <item>1998</item>
    <item>1999</item>
    <item>2000</item>
    <item>2001</item>
    <item>2002</item>
    <item>2003</item>
    <item>2004</item>
    <item>2005</item>
    <item>2006</item>
    <item>2007</item>
    <item>2008</item>
    <item>2009</item>
    <item>2010</item>
    <item>2011</item>
    <item>2012</item>
    <item>2013</item>
    <item>2014</item>
    <item>2015</item>
    <item>2016</item>
    <item>2017</item>
  </string-array>

  <string-array name="countries_array">
    <item>Afghanistan</item>
    <item>Albania</item>
    <item>Algeria</item>
    <item>American Samoa</item>
    <item>Andorra</item>
    <item>Angola</item>
    <item>Anguilla</item>
    <item>Antarctica</item>
    <item>Antigua and Barbuda</item>
    <item>Argentina</item>
    <item>Armenia</item>
    <item>Aruba</item>
    <item>Australia</item>
    <item>Austria</item>
    <item>Azerbaijan</item>
    <item>Bahamas</item>
    <item>Bahrain</item>
    <item>Bangladesh</item>
    <item>Barbados</item>
    <item>Belarus</item>
    <item>Belgium</item>
    <item>Belize</item>
    <item>Benin</item>
    <item>Bermuda</item>
    <item>Bhutan</item>
    <item>Bolivia</item>
    <item>Bosnia and Herzegovina</item>
    <item>Botswana</item>
    <item>Brazil</item>
    <item>British Indian Ocean Territory</item>
    <item>British Virgin Islands</item>
    <item>Brunei</item>
    <item>Bulgaria</item>
    <item>Burkina Faso</item>
    <item>Burundi</item>
    <item>Cambodia</item>
    <item>Cameroon</item>
    <item>Canada</item>
    <item>Cape Verde</item>
    <item>Cayman Islands</item>
    <item>Central African Republic</item>
    <item>Chad</item>
    <item>Chile</item>
    <item>China</item>
    <item>Christmas Island</item>
    <item>Cocos Islands</item>
    <item>Colombia</item>
    <item>Comoros</item>
    <item>Cook Islands</item>
    <item>Costa Rica</item>
    <item>Croatia</item>
    <item>Cuba</item>
    <item>Cyprus</item>
    <item>Czech Republic</item>
    <item>Democratic Republic of the Congo</item>
    <item>Denmark</item>
    <item>Djibouti</item>
    <item>Dominica</item>
    <item>Dominican Republic</item>
    <item>East Timor</item>
    <item>Ecuador</item>
    <item>Egypt</item>
    <item>El Salvador</item>
    <item>Equatorial Guinea</item>
    <item>Eritrea</item>
    <item>Estonia</item>
    <item>Ethiopia</item>
    <item>Falkland Islands</item>
    <item>Faroe Islands</item>
    <item>Fiji</item>
    <item>Finland</item>
    <item>France</item>
    <item>French Polynesia</item>
    <item>Gabon</item>
    <item>Gambia</item>
    <item>Georgia</item>
    <item>Germany</item>
    <item>Ghana</item>
    <item>Gibraltar</item>
    <item>Greece</item>
    <item>Greenland</item>
    <item>Grenada</item>
    <item>Guam</item>
    <item>Guatemala</item>
    <item>Guinea</item>
    <item>Guinea-Bissau</item>
    <item>Guyana</item>
    <item>Haiti</item>
    <item>Honduras</item>
    <item>Hong Kong</item>
    <item>Hungary</item>
    <item>Iceland</item>
    <item>India</item>
    <item>Indonesia</item>
    <item>Iran</item>
    <item>Iraq</item>
    <item>Ireland</item>
    <item>Isle of Man</item>
    <item>Israel</item>
    <item>Italy</item>
    <item>Ivory Coast</item>
    <item>Jamaica</item>
    <item>Japan</item>
    <item>Jersey</item>
    <item>Jordan</item>
    <item>Kazakhstan</item>
    <item>Kenya</item>
    <item>Kiribati</item>
    <item>Kuwait</item>
    <item>Kyrgyzstan</item>
    <item>Laos</item>
    <item>Latvia</item>
    <item>Lebanon</item>
    <item>Lesotho</item>
    <item>Liberia</item>
    <item>Libya</item>
    <item>Liechtenstein</item>
    <item>Lithuania</item>
    <item>Luxembourg</item>
    <item>Macao</item>
    <item>Macedonia</item>
    <item>Madagascar</item>
    <item>Malawi</item>
    <item>Malaysia</item>
    <item>Maldives</item>
    <item>Mali</item>
    <item>Malta</item>
    <item>Marshall Islands</item>
    <item>Mauritania</item>
    <item>Mauritius</item>
    <item>Mayotte</item>
    <item>Mexico</item>
    <item>Micronesia</item>
    <item>Moldova</item>
    <item>Monaco</item>
    <item>Mongolia</item>
    <item>Montenegro</item>
    <item>Montserrat</item>
    <item>Morocco</item>
    <item>Mozambique</item>
    <item>Myanmar</item>
    <item>Namibia</item>
    <item>Nauru</item>
    <item>Nepal</item>
    <item>Netherlands</item>
    <item>Netherlands Antilles</item>
    <item>New Caledonia</item>
    <item>New Zealand</item>
    <item>Nicaragua</item>
    <item>Niger</item>
    <item>Nigeria</item>
    <item>Niue</item>
    <item>North Korea</item>
    <item>Northern Mariana Islands</item>
    <item>Norway</item>
    <item>Oman</item>
    <item>Pakistan</item>
    <item>Palau</item>
    <item>Panama</item>
    <item>Papua New Guinea</item>
    <item>Paraguay</item>
    <item>Peru</item>
    <item>Philippines</item>
    <item>Pitcairn</item>
    <item>Poland</item>
    <item>Portugal</item>
    <item>Puerto Rico</item>
    <item>Qatar</item>
    <item>Republic of the Congo</item>
    <item>Romania</item>
    <item>Russia</item>
    <item>Rwanda</item>
    <item>Saint Barthelemy</item>
    <item>Saint Helena</item>
    <item>Saint Kitts and Nevis</item>
    <item>Saint Lucia</item>
    <item>Saint Martin</item>
    <item>Saint Pierre and Miquelon</item>
    <item>Saint Vincent and the Grenadines</item>
    <item>Samoa</item>
    <item>San Marino</item>
    <item>Sao Tome and Principe</item>
    <item>Saudi Arabia</item>
    <item>Senegal</item>
    <item>Serbia</item>
    <item>Seychelles</item>
    <item>Sierra Leone</item>
    <item>Singapore</item>
    <item>Slovakia</item>
    <item>Slovenia</item>
    <item>Solomon Islands</item>
    <item>Somalia</item>
    <item>South Africa</item>
    <item>South Georgia and the South Sandwich Islands</item>
    <item>South Korea</item>
    <item>Spain</item>
    <item>Sri Lanka</item>
    <item>Sudan</item>
    <item>Suriname</item>
    <item>Svalbard and Jan Mayen</item>
    <item>Swaziland</item>
    <item>Sweden</item>
    <item>Switzerland</item>
    <item>Syria</item>
    <item>Taiwan</item>
    <item>Tajikistan</item>
    <item>Tanzania</item>
    <item>Thailand</item>
    <item>Togo</item>
    <item>Tokelau</item>
    <item>Tonga</item>
    <item>Trinidad and Tobago</item>
    <item>Tunisia</item>
    <item>Turkey</item>
    <item>Turkmenistan</item>
    <item>Turks and Caicos Islands</item>
    <item>Tuvalu</item>
    <item>U.S. Virgin Islands</item>
    <item>Uganda</item>
    <item>Ukraine</item>
    <item>United Arab Emirates</item>
    <item>United Kingdom</item>
    <item>United States</item>
    <item>Uruguay</item>
    <item>Uzbekistan</item>
    <item>Vanuatu</item>
    <item>Vatican</item>
    <item>Venezuela</item>
    <item>Vietnam</item>
    <item>Wallis and Futuna</item>
    <item>Western Sahara</item>
    <item>Yemen</item>
    <item>Zambia</item>
    <item>Zimbabwe</item>
  </string-array>

  <!-- AlumniProfileActivity.java -->
  <string name="class_format">(%1$s)</string>

  <string name="address_format">%1$s\n
  %2$s, %3$s %4$s\n
  %5$s</string>
  <!-- MapActivity.java -->
  <string name="title_activity_maps">Map</string>


  <!-- AlumniAppWidget.java -->

  <string name="no_messages">No new chat messages.</string>
  <string name="new_messages">New chat messages.</string>

  <string-array name="appwidget_text">
    <item>@string/no_messages</item>
    <item>@string/new_messages</item>
  </string-array>

  <string name="add_widget">Add widget</string>
  <string name="user_id">User</string>


</resources>
